--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=laravel-api
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:1yUijjDPLoywHwvIDpG4FLxneCVbKXHB/j4ZY2GTnpE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
